RESOLVED FIXED219338
[LFC][IFC] Preferred width computation is not constrained by existing floats
https://bugs.webkit.org/show_bug.cgi?id=219338
Summary [LFC][IFC] Preferred width computation is not constrained by existing floats
alan
Reported 2020-11-29 16:10:17 PST
let's create a fake (empty) floating state/context.
Attachments
Patch (2.00 KB, patch)
2020-11-29 16:13 PST, alan
no flags
Patch (2.32 KB, patch)
2020-11-29 16:17 PST, alan
no flags
alan
Comment 1 2020-11-29 16:13:54 PST
alan
Comment 2 2020-11-29 16:17:01 PST
EWS
Comment 3 2020-11-30 07:00:52 PST
Committed r270240: <https://trac.webkit.org/changeset/270240> All reviewed patches have been landed. Closing bug and clearing flags on attachment 414997 [details].
Radar WebKit Bug Importer
Comment 4 2020-11-30 07:01:18 PST
Note You need to log in before you can comment on or make changes to this bug.