[LFC][IFC] Preferred width computation is not constrained by existing floats https://bugs.webkit.org/show_bug.cgi?id=219338

Reviewed by Antti Koivisto.

Let's create a fake(empty) floating state/context for the line as existing floats should not constrain the min/max content widths.

* layout/inlineformatting/InlineFormattingContext.cpp:
(WebCore::Layout::InlineFormattingContext::computedIntrinsicWidthForConstraint const):


Canonical link: https://commits.webkit.org/231949@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270240 268f45cc-cd09-0410-ab3c-d52691b4dbfc